Swap section for article.

--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,14 @@
             </ul>
         </nav>
         <main>
-            <section>
+            <article>
                 <h2>Get in Touch</h2>
                 <p>
                     If you have any questions or would like to book our services, feel free to reach out to
                     us using the contact form below.
                 </p>
-            </section>
-            <section>
+            </article>
+            <article>
                 <form action="#">
                     <label for="name">Your Name:</label>
                     <input type="text" id="name" name="name">
@@ -46,7 +46,7 @@
                     <br><br>
                     <button type="submit">Submit</button>
                 </form>
-            </section>
+            </article>
         </main>
         <footer>
             <p>
