--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             </ul>
         </nav>
         <main>
-            <section>
+            <article>
                 <h2>Why Choose Us?</h2>
                 <p>
                     We offer reliable and loving care for your pets while you're away. 
                     Our professional pet sitters are<br>dedicated to ensuring the safety and comfort of your animals.
                 </p>
-            </section>
-            <section>
+            </article>
+            <article>
                 <h3>Watch the Fun Our Pet Guests Have!</h3>
                 <video controls loop autoplay muted width="385px"><source src="pet_video_pixabay.mp4"></video>
-            </section>
+            </article>
         </main>
         <footer>
             <p>
