--- a/about.html
+++ b/about.html
@@ -25,21 +25,21 @@
             </ul>
         </nav>
         <main>
-            <section>
+            <article>
                 <h2>Our Team</h2>
                 <p>
                     We are a team of passionate animal lovers dedicated to providing the best
                     care for your pets. Our professional sitters ensure that your pets feel loved
                     and cared for while you're away.
                 </p>
-            </section>
-            <section>
+            </article>
+            <article>
                 <h3>Meet the Team</h3>
                 <p>
                     We have a diverse team with experience in animal care, from dogs and cats to exotic animals.
                     Every sitter is fully trained and ready to provide personalized care for your pets.
                 </p>
-            </section>
+            </article>
         </main>
         <footer>
             <p>
